# workjournal

./: CLAUDE.md  README.md  pyproject.toml
docs/: vocabulary.example.yaml  vocabulary.md
prompts-dev/: add-some-debug-stuff.md  add_smoke_tests.md  dev_build_v1.md  fix_prompts.md  fix_whisper.md  improve_config_help.md  improve_preflight_and_smoke_test.md  make-mics-selectable.md  setup_python_environment.md  use_ffmpeg_for_voice_recording.md  workjournal_vocab_feature_prompt.md
prompts-runtime/: cleanup.md
tests/: sample_notes.txt  smoke_test.sh
workjournal/: wj.py
